--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -9,6 +9,7 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
+    "diskdb": "^0.1.14",
     "express": "3.4.4",
     "jade": "*",
     "stylus": "*"
