--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -2,8 +2,7 @@
   "name": "SharpMod.Node",
   "version": "0.0.1",
   "description": "SharpMod.Node",
-  "main": "index.html",
-  "node-main": "app.js",
+  "main": "app.js",
   "author": {
     "name": "Joe",
     "email": "celluj34@gmail.com"
@@ -11,6 +10,7 @@
   "dependencies": {
     "diskdb": "^0.1.14",
     "express": "3.4.4",
+    "irc": "^0.3.9",
     "jade": "*",
     "stylus": "*"
   },
