--- a/SharpMod.Node/sharpdb/settings.json
+++ b/SharpMod.Node/sharpdb/settings.json
@@ -1,1 +1,1 @@
-[]
+[{"Key":"Username","Value":"celluj34","_id":"a7206f5469a04906bced22583e9ebd17"},{"Key":"Password","Value":"Cellucci13Gmail","_id":"4b29aa4cd27048ffa185c697c842344b"}]
