--- a/SharpMod.Node/sharpdb/settings.json
+++ b/SharpMod.Node/sharpdb/settings.json
@@ -1,1 +1,1 @@
-[{"Key":"Username","Value":"celluj34","_id":"a7206f5469a04906bced22583e9ebd17"},{"Key":"Password","Value":"Cellucci13Gmail","_id":"4b29aa4cd27048ffa185c697c842344b"}]
+[{"Key":"Username","Value":"celluj34","_id":"a7206f5469a04906bced22583e9ebd17"},{"Key":"Password","Value":"Cellucci13Gmail","_id":"4b29aa4cd27048ffa185c697c842344b"},{"Key":"Channel","Value":"shryku","LastAccessed":"2015-01-26 18:54:39","_id":"50b5581490c84f1f97a9bbcdd2958643"}]
