--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "diskdb": "^0.1.14",
     "express": "3.4.4",
-    "irc-message": "^3.0.0",
+    "irc": "^0.3.9",
     "jade": "*",
     "stylus": "*",
     "underscore": "^1.8.2"
