--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -9,10 +9,11 @@
   },
   "dependencies": {
     "diskdb": "^0.1.14",
-    "express": "3.4.4",
-    "irc": "^0.3.9",
+    "express": "^3.4.4",
     "jade": "*",
+    "socket.io": "^1.3.4",
     "stylus": "*",
+    "twitch-irc": "^1.1.0",
     "underscore": "^1.8.2"
   },
   "window": {
