--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -11,6 +11,7 @@
     "diskdb": "^0.1.14",
     "express": "^3.4.4",
     "jade": "*",
+    "request": "^2.53.0",
     "socket.io": "^1.3.4",
     "stylus": "*",
     "twitch-irc": "^1.1.0",
