--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -8,14 +8,14 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
-    "diskdb": "^0.1.14",
-    "express": "^3.4.4",
-    "jade": "*",
-    "request": "^2.53.0",
-    "socket.io": "^1.3.4",
-    "stylus": "*",
-    "twitch-irc": "^1.1.0",
-    "underscore": "^1.8.2"
+    "diskdb": "0.1.14",
+    "express": "3.4.4",
+    "jade": "1.9.2",
+    "request": "2.53.0",
+    "socket.io": "1.3.4",
+    "stylus": "0.50.0",
+    "twitch-irc": "1.1.0",
+    "underscore": "1.8.2"
   },
   "window": {
     "title": "SharpMod",
