--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -8,11 +8,12 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
+    "body-parser": "1.12.0",
+    "compression": "1.4.1",
     "diskdb": "0.1.14",
-    "express": "3.20.1",
+    "express": "4.12.0",
     "request": "2.53.0",
     "socket.io": "1.3.4",
-    "stylus": "0.50.0",
     "twitch-irc": "1.1.0",
     "underscore": "1.8.2"
   },
