--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "body-parser": "1.12.0",
     "compression": "1.4.1",
+    "cors": "2.5.3",
     "diskdb": "0.1.14",
     "express": "4.12.0",
     "request": "2.53.0",
