--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -1,37 +1,20 @@
 {
-  "name": "SharpMod.Node",
-  "version": "0.0.1",
-  "description": "SharpMod.Node",
-  "main": "loading.html",
-  "node-main": "app.js",
-  "author": {
-    "name": "Joe",
-    "email": "celluj34@gmail.com"
-  },
-  "dependencies": {
-    "body-parser": "1.12.2",
-    "compression": "1.4.3",
-    "diskdb": "0.1.14",
-    "express": "4.12.3",
-    "request": "2.54.0",
-    "socket.io": "1.3.5",
-    "twitch-irc": "1.2.5",
-    "underscore": "1.8.2"
-  },
-  "window": {
-    "title": "SharpMod",
-    "toolbar": false,
-    "resizable": true,
-    "width": 800,
-    "height": 500,
-    "min_width": 400,
-    "min_height": 200,
-    "position": "center",
-    "frame": true
-  },
-  "webkit": {
-    "plugin": false,
-    "java": false,
-    "page-cache": true
-  }
+    "name": "SharpMod.Node",
+    "version": "0.4",
+    "description": "SharpMod.Node",
+    "main": "app.js",
+    "author": {
+        "name": "Joe",
+        "email": "celluj34@gmail.com"
+    },
+    "dependencies": {
+        "body-parser": "1.12.2",
+        "compression": "1.4.3",
+        "diskdb": "0.1.14",
+        "express": "4.12.3",
+        "request": "2.54.0",
+        "socket.io": "1.3.5",
+        "twitch-irc": "1.2.5",
+        "underscore": "1.8.2"
+    }
 }
