--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -1,20 +1,20 @@
 {
-    "name": "SharpMod.Node",
-    "version": "0.4",
-    "description": "SharpMod.Node",
-    "main": "app.js",
-    "author": {
-        "name": "Joe",
-        "email": "celluj34@gmail.com"
-    },
-    "dependencies": {
-        "body-parser": "1.12.2",
-        "compression": "1.4.3",
-        "diskdb": "0.1.14",
-        "express": "4.12.3",
-        "request": "2.54.0",
-        "socket.io": "1.3.5",
-        "twitch-irc": "1.2.5",
-        "underscore": "1.8.2"
-    }
+  "name": "SharpMod",
+  "version": "0.4.0",
+  "description": "SharpMod",
+  "main": "app.js",
+  "author": {
+    "name": "Joseph Cellucci",
+    "email": "celluj34@gmail.com"
+  },
+  "dependencies": {
+    "body-parser": "1.12.2",
+    "compression": "1.4.3",
+    "diskdb": "0.1.14",
+    "express": "4.12.3",
+    "request": "^2.55.0",
+    "socket.io": "1.3.5",
+    "twitch-irc": "1.2.5",
+    "underscore": "^1.8.3"
+  }
 }
