--- a/SharpMod.Node/package.json
+++ b/SharpMod.Node/package.json
@@ -14,6 +14,7 @@
     "request": "^2.55.0",
     "socket.io": "1.3.5",
     "twitch-irc": "1.2.6",
-    "underscore": "^1.8.3"
+    "underscore": "1.8.3",
+    "underscore.string": "3.0.3"
   }
 }
