--- a/SharpBot/package.json
+++ b/SharpBot/package.json
@@ -11,7 +11,7 @@
     "body-parser": "1.12.2",
     "diskdb": "0.1.14",
     "express": "4.12.3",
-    "request": "^2.55.0",
+    "request": "2.55.0",
     "socket.io": "1.3.5",
     "twitch-irc": "1.2.6",
     "underscore": "1.8.3",
