change name from SharpMod and SharpBot to OpenMod and OpenBot, respectively

--- a/OpenBot/package.json
+++ b/OpenBot/package.json
@@ -1,7 +1,6 @@
 {
-  "name": "SharpMod",
-  "version": "0.10.1",
-  "description": "SharpMod",
+  "name": "OpenBot",
+  "description": "OpenBot",
   "main": "app.js",
   "author": {
     "name": "Joseph Cellucci",
