--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -7,13 +7,13 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
-    "body-parser": "1.12.3",
-    "diskdb": "0.1.14",
-    "express": "4.12.3",
-    "request": "2.55.0",
-    "socket.io": "1.3.5",
-    "twitch-irc": "1.2.7",
-    "underscore": "1.8.3",
-    "underscore.string": "3.0.3"
+    "body-parser": "*",
+    "diskdb": "*",
+    "express": "*",
+    "request": "*",
+    "socket.io": "*",
+    "twitch-irc": "*",
+    "underscore": "*",
+    "underscore.string": "*"
   }
 }
