--- a/.gitignore
+++ b/.gitignore
@@ -159,6 +159,7 @@ ClientBin/
 *.pfx
 *.publishsettings
 node_modules/
+bower_components/
 
 # RIA/Silverlight projects
 Generated_Code/
@@ -189,4 +190,3 @@ _Pvt_Extensions/
 ModelManifest.xml
 
 .ntvs_analysis.dat
-SharpMod.exe
