--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -8,8 +8,8 @@
   },
   "dependencies": {
     "body-parser": "1.12.4",
-    "diskdb": "0.1.14",
     "express": "4.12.4",
+    "lowdb": "0.8.1",
     "request": "2.57.0",
     "socket.io": "1.3.5",
     "twitch-irc": "1.2.7",
