--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -10,6 +10,7 @@
     "body-parser": "1.12.4",
     "express": "4.12.4",
     "lowdb": "0.8.1",
+    "moment": "2.10.3",
     "request": "2.57.0",
     "socket.io": "1.3.5",
     "twitch-irc": "1.2.7",
