--- a/OpenBot/package.json
+++ b/OpenBot/package.json
@@ -7,10 +7,11 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
-    "body-parser": "1.12.4",
-    "diskdb": "0.1.14",
-    "express": "4.12.4",
-    "request": "2.57.0",
+    "body-parser": "1.13.1",
+    "express": "4.13.0",
+    "lowdb": "0.10.0",
+    "moment": "2.10.3",
+    "request": "2.58.0",
     "socket.io": "1.3.5",
     "twitch-irc": "1.2.7",
     "underscore": "1.8.3",
