--- a/OpenMod/bower.json
+++ b/OpenMod/bower.json
@@ -2,13 +2,12 @@
   "name": "OpenMod",
   "private": true,
   "dependencies": {
-    "bootstrap": "3.3.4",
+    "bootstrap": "3.3.5",
     "jquery": "2.1.4",
-    "select2": "4.0.0",
-    "jquery.atwho": "1.3.0",
-    "socket.io": "1.3.5",
-    "underscore": "1.8.3",
+    "jquery.atwho": "1.3.2",
     "jquery.caret": "1.5.2",
-    "knockout": "3.3.0"
+    "knockout": "3.3.0",
+    "select2": "4.0.0",
+    "underscore": "1.8.3"
   }
 }
