--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -16,5 +16,10 @@
     "twitch-irc": "1.2.7",
     "underscore": "1.8.3",
     "underscore.string": "3.1.1"
+  },
+  "devDependencies": {
+    "gulp": "3.9.0",
+    "rimraf": "2.4.0",
+    "fs": "0.0.2"
   }
 }
