--- a/OpenMod/project.json
+++ b/OpenMod/project.json
@@ -7,7 +7,12 @@
     "bower_components"
   ],
   "scripts": {
-    "postrestore": [ "npm install", "bower install" ],
-    "prepare": [ "gulp copy" ]
+    "postrestore": [
+      "npm install",
+      "bower install"
+    ],
+    "prepare": [
+      "gulp copy"
+    ]
   }
 }
