--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -13,7 +13,7 @@
     "moment": "2.10.3",
     "request": "2.58.0",
     "socket.io": "1.3.5",
-    "twitch-irc": "1.2.7",
+    "tmi.js": "0.0.12",
     "underscore": "1.8.3",
     "underscore.string": "3.1.1"
   },
