--- a/OpenMod/bower.json
+++ b/OpenMod/bower.json
@@ -5,6 +5,7 @@
     "At.js": "1.3.2",
     "bootstrap": "3.3.5",
     "caret.js": "0.2.2",
+    "datatables": "1.10.7",
     "jquery": "2.1.4",
     "knockout": "3.3.0",
     "select2": "4.0.0",
