--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -7,19 +7,20 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
-    "body-parser": "1.13.1",
-    "express": "4.13.0",
-    "lowdb": "0.10.0",
+    "body-parser": "1.13.2",
+    "express": "4.13.1",
+    "lowdb": "0.10.1",
     "moment": "2.10.3",
     "request": "2.58.0",
     "socket.io": "1.3.5",
-    "tmi.js": "0.0.12",
+    "tmi.js": "0.0.16",
     "underscore": "1.8.3",
     "underscore.string": "3.1.1"
   },
   "devDependencies": {
     "gulp": "3.9.0",
     "rimraf": "2.4.0",
-    "fs": "0.0.2"
+    "fs": "0.0.2",
+    "benchmark": "1.0.0"
   }
 }
