--- a/OpenBot/bower.json
+++ b/OpenBot/bower.json
@@ -2,13 +2,13 @@
   "name": "OpenBot",
   "private": true,
   "dependencies": {
+    "At.js": "1.3.2",
     "bootstrap": "3.3.5",
+    "caret.js": "0.2.2",
+    "datatables": "1.10.7",
     "jquery": "2.1.4",
+    "knockout": "3.3.0",
     "select2": "4.0.0",
-    "jquery.atwho": "1.3.1",
-    "socket.io": "1.3.5",
-    "underscore": "1.8.3",
-    "jquery.caret": "1.5.2",
-    "knockout": "3.3.0"
+    "underscore": "1.8.3"
   }
 }
