--- a/OpenBot/package.json
+++ b/OpenBot/package.json
@@ -7,14 +7,20 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
-    "body-parser": "1.13.1",
-    "express": "4.13.0",
-    "lowdb": "0.10.0",
+    "body-parser": "1.13.2",
+    "express": "4.13.1",
+    "lowdb": "0.10.2",
     "moment": "2.10.3",
     "request": "2.58.0",
-    "socket.io": "1.3.5",
-    "twitch-irc": "1.2.7",
+    "socket.io": "1.3.6",
+    "tmi.js": "0.0.16",
     "underscore": "1.8.3",
     "underscore.string": "3.1.1"
+  },
+  "devDependencies": {
+    "gulp": "3.9.0",
+    "rimraf": "2.4.1",
+    "fs": "0.0.2",
+    "benchmark": "1.0.0"
   }
 }
