--- a/OpenBot/package.json
+++ b/OpenBot/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "body-parser": "1.13.2",
     "express": "4.13.1",
+    "linkify-it": "1.2.0",
     "lowdb": "0.10.2",
     "moment": "2.10.5",
     "request": "2.60.0",
