--- a/OpenBot/package.json
+++ b/OpenBot/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "OpenBot",
-  "description": "OpenBot",
-  "main": "app.js",
-  "author": {
-    "name": "Joseph Cellucci",
-    "email": "celluj34@gmail.com"
-  },
-  "dependencies": {
-    "body-parser": "1.13.3",
-    "express": "4.13.3",
-    "linkify-it": "1.2.0",
-    "lowdb": "0.10.2",
-    "moment": "2.10.6",
-    "request": "2.61.0",
-    "socket.io": "1.3.6",
-    "tmi.js": "0.0.21",
-    "underscore": "1.8.3",
-    "underscore.string": "3.1.1"
-  },
-  "devDependencies": {
-    "gulp": "3.9.0",
-    "rimraf": "2.4.2",
-    "fs": "0.0.2",
-    "benchmark": "1.0.0"
-  }
+    "name": "OpenBot",
+    "description": "OpenBot",
+    "main": "app.js",
+    "author": {
+        "name": "Joseph Cellucci",
+        "email": "celluj34@gmail.com"
+    },
+    "repository": {
+        "url": "https://github.com/celluj34/OpenTwitchTools"
+    },
+    "license": "GPL-3.0",
+    "private": true,
+    "version": "0.0.1",
+    "dependencies": {
+        "body-parser": "1.13.3",
+        "express": "4.13.3",
+        "linkify-it": "1.2.0",
+        "lowdb": "0.10.2",
+        "moment": "2.10.6",
+        "request": "2.61.0",
+        "socket.io": "1.3.6",
+        "tmi.js": "0.0.22",
+        "underscore": "1.8.3",
+        "underscore.string": "3.2.1"
+    },
+    "devDependencies": {
+        "gulp": "3.9.0",
+        "rimraf": "2.4.2",
+        "fs": "0.0.2",
+        "benchmark": "1.0.0"
+    }
 }
