--- a/OpenView/package.json
+++ b/OpenView/package.json
@@ -7,10 +7,11 @@
     "email": "celluj34@gmail.com"
   },
   "dependencies": {
-    "body-parser": "1.13.1",
-    "express": "4.13.0",
-    "request": "2.58.0",
+    "body-parser": "1.14.0",
+    "express": "4.13.3",
+    "gulp": "3.9.0",
+    "request": "2.62.0",
     "underscore": "1.8.3",
-    "underscore.string": "3.1.1"
+    "underscore.string": "3.2.2"
   }
 }
