--- a/OpenMod/package.json
+++ b/OpenMod/package.json
@@ -13,20 +13,20 @@
   "private": true,
   "version": "0.0.14",
   "dependencies": {
-    "body-parser": "1.14.0",
+    "body-parser": "1.14.1",
     "express": "4.13.3",
     "linkify-it": "1.2.0",
     "lowdb": "0.10.2",
     "moment": "2.10.6",
-    "request": "2.62.0",
-    "socket.io": "1.3.6",
-    "tmi.js": "0.0.23",
+    "request": "2.65.0",
+    "socket.io": "1.3.7",
+    "tmi.js": "0.0.24",
     "underscore": "1.8.3",
     "underscore.string": "3.2.2"
   },
   "devDependencies": {
+    "fs": "0.0.2",
     "gulp": "3.9.0",
-    "rimraf": "2.4.2",
-    "fs": "0.0.2"
+    "rimraf": "2.4.3"
   }
 }
