--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -5,8 +5,8 @@
   },
   "dependencies": {
     "angular2": "2.0.0-beta.3",
-    "es6-promise": "^3.0.2",
-    "es6-shim": "^0.34.2",
+    "es6-promise": "3.0.2",
+    "es6-shim": "0.34.2",
     "express": "4.13.4",
     "reflect-metadata": "0.1.3",
     "rxjs": "5.0.0-beta.1"
