--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -1,23 +1,24 @@
 {
-  "author": {
-    "name": "Joe",
-    "email": "celluj34@gmail.com"
-  },
-  "dependencies": {
-    "angular2": "2.0.0-beta.3",
-    "es6-promise": "3.0.2",
-    "es6-shim": "0.34.2",
-    "express": "4.13.4",
-    "reflect-metadata": "0.1.3",
-    "rxjs": "5.0.0-beta.1"
-  },
-  "description": "OpenMod.Angular",
-  "devDependencies": {
-    "fs": "0.0.2",
-    "gulp": "3.9.0",
-    "rimraf": "2.5.1"
-  },
-  "main": "app.js",
-  "name": "OpenMod.Angular",
-  "version": "0.0.0"
+    "author": {
+        "name": "Joe",
+        "email": "celluj34@gmail.com"
+    },
+    "dependencies": {
+        "angular2": "2.0.0-beta.7",
+        "express": "4.13.4"
+    },
+    "description": "OpenMod.Angular",
+    "devDependencies": {
+        "fs": "0.0.2",
+        "gulp": "3.9.1",
+        "rimraf": "2.5.2",
+        "gulp-babel": "6.1.2",
+        "gulp-sourcemaps": "1.6.0",
+        "gulp-concat": "2.6.0",
+        "gulp-uglify": "1.5.3",
+        "babel-preset-es2015": "6.5.0"
+    },
+    "main": "app.js",
+    "name": "OpenModAngular",
+    "version": "0.0.0"
 }
