--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -1,27 +1,29 @@
 {
-  "author": {
-    "name": "Joe",
-    "email": "celluj34@gmail.com"
-  },
-  "dependencies": {
-    "angular": "1.5.0",
+    "author": {
+        "name": "Joe",
+        "email": "celluj34@gmail.com"
+    },
+    "dependencies": {
+        "angular": "1.5.0",
     "babel-preset-es2015": "^6.6.0",
-    "express": "4.13.4",
+        "bootstrap": "3.3.6",
+        "express": "4.13.4",
     "karma": "^0.13.22"
-  },
-  "description": "OpenMod.Angular",
-  "devDependencies": {
-    "babel-preset-es2015": "6.6.0",
-    "fs": "0.0.2",
-    "gulp": "3.9.1",
-    "gulp-babel": "6.1.2",
-    "gulp-sourcemaps": "1.6.0",
-    "gulp-uglify": "1.5.3",
-    "karma": "0.13.22",
-    "karma-jasmine": "0.3.7",
-    "rimraf": "2.5.2"
-  },
-  "main": "app.js",
-  "name": "OpenBot",
-  "version": "0.0.0"
+        "jquery": "2.2.1"
+    },
+    "description": "OpenMod.Angular",
+    "devDependencies": {
+        "babel-preset-es2015": "6.6.0",
+        "fs": "0.0.2",
+        "gulp": "3.9.1",
+        "gulp-babel": "6.1.2",
+        "gulp-sourcemaps": "1.6.0",
+        "gulp-uglify": "1.5.3",
+        "karma": "0.13.22",
+        "karma-jasmine": "0.3.7",
+        "rimraf": "2.5.2"
+    },
+    "main": "app.js",
+    "name": "OpenBot",
+    "version": "0.0.0"
 }
