--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -1,27 +1,37 @@
 {
-    "author": {
-        "name": "Joe",
-        "email": "celluj34@gmail.com"
-    },
-    "dependencies": {
-        "angular": "1.5.2",
-        "bootstrap": "3.3.6",
-        "express": "4.13.4",
-        "jquery": "2.2.2"
-    },
-    "description": "OpenMod.Angular",
-    "devDependencies": {
-        "babel-preset-es2015": "6.6.0",
-        "fs": "0.0.2",
-        "gulp": "3.9.1",
-        "gulp-babel": "6.1.2",
-        "gulp-sourcemaps": "1.6.0",
-        "gulp-uglify": "1.5.3",
-        "karma": "0.13.22",
-        "karma-jasmine": "0.3.8",
-        "rimraf": "2.5.2"
-    },
-    "main": "app.js",
-    "name": "OpenBot",
-    "version": "0.0.0"
+  "author": {
+    "name": "Joe",
+    "email": "celluj34@gmail.com"
+  },
+  "dependencies": {
+    "angular": "1.5.3",
+    "bootstrap": "3.3.6",
+    "express": "4.13.4",
+    "jquery": "2.2.2"
+  },
+  "description": "OpenMod.Angular",
+  "devDependencies": {
+    "babelify": "7.2.0",
+    "browserify": "13.0.0",
+    "babel-preset-es2015": "6.6.0",
+    "fs": "0.0.2",
+    "gulp": "3.9.1",
+    "gulp-babel": "6.1.2",
+    "gulp-connect": "3.2.2",
+    "gulp-jshint": "2.0.0",
+    "gulp-sourcemaps": "1.6.0",
+    "gulp-uglify": "1.5.3",
+    "gulp-load-plugins": "1.2.0",
+    "gulp-ng-annotate": "2.0.0",
+    "karma": "0.13.22",
+    "karma-jasmine": "0.3.8",
+    "jshint": "2.9.1",
+    "jshint-stylish": "2.1.0",
+    "rimraf": "2.5.2",
+    "vinyl-source-stream": "1.1.0",
+    "vinyl-buffer": "1.0.0"
+  },
+  "main": "app.js",
+  "name": "open-bot",
+  "version": "0.0.0"
 }
