--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -14,6 +14,7 @@
         "babelify": "7.2.0",
         "browserify": "13.0.0",
         "babel-preset-es2015": "6.6.0",
+        "babel-preset-es2016": "6.0.11",
         "fs": "0.0.2",
         "gulp": "3.9.1",
         "gulp-babel": "6.1.2",
