--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -1,25 +1,25 @@
 {
-  "author": {
-    "name": "Joe",
-    "email": "celluj34@gmail.com"
-  },
-  "dependencies": {
-    "body-parser": "1.15.0",
-    "express": "4.13.4",
-    "linkify-it": "1.2.0",
-    "lowdb": "0.12.5",
-    "moment": "2.12.0",
-    "request": "2.70.0",
-    "socket.io": "1.4.5",
-    "tmi.js": "0.0.29",
-    "underscore": "1.8.3",
-    "underscore.string": "3.3.4"
-  },
-  "description": "OpenMod.Angular",
+    "author": {
+        "name": "Joe",
+        "email": "celluj34@gmail.com"
+    },
+    "dependencies": {
+        "body-parser": "1.15.0",
+        "express": "4.13.4",
+        "linkify-it": "1.2.0",
+        "lowdb": "0.12.5",
+        "moment": "2.12.0",
+        "request": "2.70.0",
+        "socket.io": "1.4.5",
+        "tmi.js": "0.0.29",
+        "underscore": "1.8.3",
+        "underscore.string": "3.3.4"
+    },
+    "description": "OpenMod.Angular",
     "devDependencies": {
         "angular": "1.5.3",
         "angular-ui-bootstrap": "1.3.1",
-        "angular-ui-router": "0.2.18",
+        "angular-ui-router": "1.0.0-alpha.4",
         "babelify": "7.2.0",
         "babel-preset-es2015": "6.6.0",
         "babel-preset-es2016": "6.0.11",
@@ -38,9 +38,9 @@
         "vinyl-buffer": "1.0.0",
         "vinyl-source-stream": "1.1.0"
     },
-  "license": "MIT",
-  "main": "app.js",
-  "name": "open-bot",
-  "repository": "https://github.com/celluj34/OpenTwitchTools",
-  "version": "0.0.0"
+    "license": "MIT",
+    "main": "app.js",
+    "name": "open-bot",
+    "repository": "https://github.com/celluj34/OpenTwitchTools",
+    "version": "0.0.0"
 }
