--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -11,6 +11,7 @@
     "moment": "2.12.0",
     "request": "2.71.0",
     "socket.io": "1.4.5",
+    "path": "0.12.7",
     "tmi.js": "0.0.29",
     "underscore": "1.8.3",
     "underscore.string": "3.3.4"
