--- a/OpenMod.Angular/package.json
+++ b/OpenMod.Angular/package.json
@@ -5,23 +5,24 @@
   },
   "dependencies": {
     "body-parser": "1.15.0",
+    "electron-prebuilt": "1.1.0",
     "express": "4.13.4",
     "linkify-it": "1.2.0",
     "lowdb": "0.12.5",
-    "moment": "2.12.0",
-    "request": "2.71.0",
-    "socket.io": "1.4.5",
+    "moment": "2.13.0",
     "path": "0.12.7",
+    "request": "2.72.0",
+    "socket.io": "1.4.5",
     "tmi.js": "0.0.29",
     "underscore": "1.8.3",
     "underscore.string": "3.3.4"
   },
   "description": "OpenMod.Angular",
   "devDependencies": {
-    "angular": "1.5.3",
-    "angular-ui-bootstrap": "1.3.1",
+    "angular": "1.5.5",
+    "angular-ui-bootstrap": "1.3.2",
     "angular-ui-router": "1.0.0-alpha.4",
-    "babelify": "7.2.0",
+    "babelify": "7.3.0",
     "babel-preset-es2015": "6.6.0",
     "babel-preset-es2016": "6.0.11",
     "bootswatch": "3.3.6",
@@ -29,12 +30,12 @@
     "gulp": "3.9.1",
     "gulp-babel": "6.1.2",
     "gulp-jshint": "2.0.0",
-    "gulp-load-plugins": "1.2.0",
+    "gulp-load-plugins": "1.2.2",
     "gulp-ng-annotate": "2.0.0",
     "gulp-rename": "1.2.2",
     "gulp-sourcemaps": "1.6.0",
     "gulp-uglify": "1.5.3",
-    "jshint": "2.9.1",
+    "jshint": "2.9.2",
     "jshint-stylish": "2.1.0",
     "vinyl-buffer": "1.0.0",
     "vinyl-source-stream": "1.1.0"
